--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -15,11 +15,13 @@
     <item android:id="@+id/userMenuItemWeather"
           android:title="Weather"
           android:orderInCategory="3"
-          app:showAsAction="never"/>
+          app:showAsAction="never"
+          android:onClick="goToWeatherConditionActivity"/>
     <item android:id="@+id/userMenuItemLogout"
           android:title="Logout"
           android:orderInCategory="4"
           app:showAsAction="never"
           android:onClick="logout"
         />
+
 </menu>
